Added third and fourth multiplication methods. Added ability to calculate XY+G to second, third, and fourth multiplication methods.